@@ -1,1 +1,10 @@
 # RiteshGame
+
+
+Java Version: 18
+
+
+VM Argument
+--module-path /Users/ritesh/workspace/school/lib/javafx/lib --add-modules=javafx.controls --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED
+
+
